src/externals/lgpl/neodatis/dot-net/src/test/bad/Neodatis/Odb/Test/Inheritance/IInterface.cs
namespace NeoDatis.Odb.Test.Inheritance
{
	public interface IInterface
	{
		string GetName();
	}
}
